force-app/main/default/objects/TTS_Technology_Coverage__c/TTS_Technology_Coverage__c.object-meta.xml
<CustomObject>
    <description>The Technology Coverage object links an Agreement to the Technology record(s) it covers, with an Allocation Percent per Technology. As a master-detail child of Agreement, it enables agreements spanning multiple technologies. Commonly used for multi-technology licensing agreements.</description>
    <label>Technology Coverage</label>
    <nameField>
        <displayFormat>TCOV{00000}</displayFormat>
        <label>Technology Coverage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technology Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>