force-app/main/default/objects/TTS_Technology_Coverage__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <label>Allocation Percent</label>
    <description>The percentage of the Agreement's coverage allocated to this Technology. Allocation Percent across all coverage rows on one Agreement should sum to 100%.</description>
    <inlineHelpText>Enter the share of this Agreement allocated to this Technology, as a percent (e.g. 60 for 60%).</inlineHelpText>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>