force-app/main/default/objects/TTS_Technology_Coverage__c/fields/TTS_Agreement__c.field-meta.xml
<CustomField>
    <fullName>TTS_Agreement__c</fullName>
    <label>Agreement</label>
    <description>Master-detail parent linking this Technology Coverage row to the Agreement it allocates coverage under.</description>
    <inlineHelpText>The Agreement this coverage and allocation belongs to.</inlineHelpText>
    <type>MasterDetail</type>
    <referenceTo>TTS_Agreement__c</referenceTo>
    <relationshipLabel>Technology Coverages</relationshipLabel>
    <relationshipName>Technology_Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>