force-app/main/default/objects/TTS_Technology_Coverage__c/fields/TTS_Technology__c.field-meta.xml
<CustomField>
    <fullName>TTS_Technology__c</fullName>
    <label>Technology</label>
    <description>The Technology this coverage row allocates a share of the Agreement to.</description>
    <inlineHelpText>Select the Technology this row covers under the Agreement.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Technology Coverages</relationshipLabel>
    <relationshipName>Technology_Coverages</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>